# PyNDS

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  ci-wheels.yml
cnds/: cnds.cpp  config.cpp  nds.cpp  nds_input.cpp  nds_memory.cpp
cnds/include/: config.hpp  nds.hpp
pynds/: __init__.py  audio.py  button.py  config.py  memory.py  pynds.py  window.py
